# LambdaCalculusHaskell

./: readme.md  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/297b7a95/: cabal_macros.h
.stack-work/ghci/6e68d652/: cabal_macros.h
.stack-work/ghci/849b039e/: cabal_macros.h
.stack-work/ghci/9b59d3d9/: cabal_macros.h
lbd/: lbd.cabal  stack.yaml
lbd/.stack-work/: stack.sqlite3
lbd/.stack-work/ghci/274171ba/: cabal_macros.h
lbd/.stack-work/ghci/8f202099/: cabal_macros.h
lbd/.stack-work/ghci/ee353e95/: cabal_macros.h
lbd/src/: Check.hs  LambdaCalc.hs  Main.hs  OutputMisc.hs  Parser.hs  Testing.hs  stuff.hs
