name:                lbd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lbd#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lbd
  hs-source-dirs:      src
  other-modules: 	   LambdaCalc,Parser,OutputMisc,Testing,Check
  main-is:             Main.hs
					
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
					 , parsec     >= 3.1 && <3.2
					 , mtl
					 , text
					 , attoparsec
					 , hspec
					 , hspec-attoparsec
					 , extra
					 , containers
					 